Simplify: use non-deprecated OIDC method, List.of, explicit auth attribute
Co-authored-by: Isaac